--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
     "react-bootstrap": "^0.27.3",
     "react-dom": "^0.14.0-rc1",
     "style-loader": "^0.13.0",
-    "supergroup-es6": "0.0.4"
-  },
-  "devDependencies": {
+    "supergroup-es6": "0.0.4",
     "css-loader": "^0.21.0",
     "webpack": "^1.9.11",
     "webpack-dev-middleware": "^1.2.0",
@@ -41,5 +39,7 @@
     "file-loader": "^0.8.5",
     "imports-loader": "^0.6.5",
     "url-loader": "^0.5.7"
+  },
+  "devDependencies": {
   }
 }
