--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "babel-loader": "^5.1.4",
     "babel-polyfill": "^6.5.0",
     "bootstrap": "^3.3.5",
+    "bootstrap-webpack": "0.0.5",
+    "compression": "^1.6.1",
+    "css-loader": "^0.21.0",
     "d3": "^3.5.6",
+    "exports-loader": "^0.6.3",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "imports-loader": "^0.6.5",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
     "lodash": "^3.10.1",
@@ -29,17 +36,10 @@
     "react-dom": "^0.14.0-rc1",
     "style-loader": "^0.13.0",
     "supergroup-es6": "0.0.4",
-    "css-loader": "^0.21.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.9.11",
     "webpack-dev-middleware": "^1.2.0",
-    "bootstrap-webpack": "0.0.5",
-    "webpack-hot-middleware": "^2.2.0",
-    "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "imports-loader": "^0.6.5",
-    "url-loader": "^0.5.7"
+    "webpack-hot-middleware": "^2.2.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
