--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^0.21.0",
     "d3": "^3.5.6",
     "exports-loader": "^0.6.3",
+    "expose": "^0.1.4",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
@@ -35,6 +36,7 @@
     "react": "^0.14.0-rc1",
     "react-bootstrap": "^0.27.3",
     "react-dom": "^0.14.0-rc1",
+    "react-parallel-coordinates": "^0.1.9",
     "style-loader": "^0.13.0",
     "supergroup-es6": "0.0.4",
     "url-loader": "^0.5.7",
