--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "imports-loader": "^0.6.5",
+    "jquery": "^2.2.2",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
     "lodash": "^3.10.1",
@@ -41,9 +42,9 @@
     "supergroup-es6": "0.0.4",
     "url-loader": "^0.5.7",
     "webpack": "^1.9.11",
-    "webpack-dev-middleware": "^1.2.0"
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.2.0"
   },
   "devDependencies": {
-    "webpack-hot-middleware": "^2.2.0"
   }
 }
